// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuButton (default props) => renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "margin": 7,
      "width": "100%",
    }
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        Object {
          "backgroundColor": "black",
          "borderColor": "#00ff00",
          "borderRadius": 0,
          "borderWidth": 1,
          "flex": 1,
          "width": "100%",
        },
      ]
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#00ff00",
          "fontFamily": "px_sans_nouveaux",
          "paddingTop": 9,
          "textAlign": "center",
        }
      }
    />
  </View>
</View>
`;

exports[`MenuButton (with title) => renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "margin": 7,
      "width": "100%",
    }
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        Object {
          "backgroundColor": "black",
          "borderColor": "#00ff00",
          "borderRadius": 0,
          "borderWidth": 1,
          "flex": 1,
          "width": "100%",
        },
      ]
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#00ff00",
          "fontFamily": "px_sans_nouveaux",
          "paddingTop": 9,
          "textAlign": "center",
        }
      }
    >
      foo
    </Text>
  </View>
</View>
`;

exports[`MenuButton => changes color while finger is held down 1`] = `
Object {
  "backgroundColor": "#00ff00",
  "borderColor": "#00ff00",
  "borderRadius": 0,
  "borderWidth": 1,
  "flex": 1,
  "width": "100%",
}
`;

exports[`MenuButton => changes color while finger is held down 2`] = `
Object {
  "backgroundColor": "black",
  "borderColor": "#00ff00",
  "borderRadius": 0,
  "borderWidth": 1,
  "flex": 1,
  "width": "100%",
}
`;
